--- a/app/views/pages/employers.html.haml
+++ b/app/views/pages/employers.html.haml
@@ -2,7 +2,7 @@
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
   .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8); }
 
-#employer.aboutcontainer
+#employer_landing.aboutcontainer
   .aboutbox
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
