--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -1,10 +1,10 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8); }
+  .aboutcontainer{ width: 950px; background: rgba(36, 72, 109, 0.8);}
   
 <script src="https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js" type="text/javascript"></script>
 
-#employer1.aboutcontainer
+#employer_product.aboutcontainer
   .aboutbox
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
