--- a/app/views/pages/take_evaluation.html.haml
+++ b/app/views/pages/take_evaluation.html.haml
@@ -1,6 +1,6 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ background: rgba(36, 72, 109, 0.8); width: 900px;}
+  .aboutcontainer{ background: $employer_blue; width: 900px;}
   
 
 #employer.aboutcontainer
@@ -8,7 +8,7 @@
     %div{ style: "padding-bottom: 10px;  border-bottom: 1px solid #DDD;" }
       %h1{ style: "vertical-align: middle; font-size:50px;" } Community Manager
       %h3{ style: "vertical-align: middle; font-size: 30px;"} Google, Inc.
-    %div{ style: "text-align: center; margin: 20px 20px 30px; border: 4px solid #729959; border-radius: 4px; background-color: rgba(150, 201, 117, 0.27);"}
+    %div{ style: "text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;"}
       %div{ style: "border-bottom: 1px solid rgba(0,0,0,.1); padding: 14px; "}
         %div{ style: "display: inline-block; text-align: left; width:11%; "}
           = image_tag GIANT_STONEY, style: "height: 100px;"
@@ -16,7 +16,7 @@
           %h3{ style: "font-size: 24px;" } Welcome to MetaBright!
           %p{ style: "font-size: 15px; line-height: 20px; margin-top: 8px;"} Google, Inc. is using MetaBright to measure their job candidates' skills. MetaBright gives you the chance to prove and showcase what you know!
     %h2{ style: "font-size: 30px; border-bottom: 1px solid #DDD;"} Apply to this job
-    %div{ style: "margin: 20px; border-radius: 4px; border: 4px solid rgba(126, 78, 54, 0.78); padding: 12px; background-color: rgba(212, 152, 123, 0.14);" }
+    %div{ style: "margin: 20px; border-radius: 4px; border: 4px solid $employer_orange; padding: 12px; background-color: $employer_orange_light;" }
       %div{ style: ""}
         %div.img-circle{ style: "height: 45px; width: 45px; line-height: 45px; display: inline-block; background-color:rgba(109, 44, 13, 0.64); color: #FFEDEA;" }
           %span{ style: "display: block; float: left; font-size: 18px; text-align: center; width: 100%;"} 1
