--- a/app/views/pages/talentminer.html.haml
+++ b/app/views/pages/talentminer.html.haml
@@ -4,7 +4,7 @@
   
 <script src="https://raw.github.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js" type="text/javascript"></script>
 
-#employer1.aboutcontainer
+#employer_product.aboutcontainer
   .aboutbox
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
