--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -814,6 +814,10 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   background-color: $employer_orange_light;
 }
 
+#employer {
+  background: $employer_blue;
+}
+
 #employer_landing{
   .aboutheader{
    padding: 15px 0 0 15px;
@@ -976,7 +980,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 
 
 
-.create_evaluation {
+#create_evaluation {
  
  h3 {
   margin-bottom: 0;  
@@ -987,7 +991,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
  }
  .challenge_chooser {
    display: inline-block;
-   width: 250px; 
+   width: 62%; 
    margin:0 20px; 
    vertical-align: top;
    border: 1px solid rgb(172, 172, 172);
@@ -995,10 +999,28 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
    text-align: left;
    
    .challenges {
-     max-height: 100px;
-     overflow-y: auto;
      
      input[type="radio"] { margin:0; }
+     
+     form { 
+       .checklist {
+         border: 1px solid #ccc;
+         list-style: none;
+         height: 170px;
+         overflow: auto;
+         margin: 0; 
+         padding: 5px 0 0 0;
+         
+         li { margin: 0; padding: 0; }
+         label { 
+           display: block; padding: 5px 5px 5px 35px; text-indent: -25px;
+           
+           &:hover { background: #777; color: #fff; }
+           
+           input {margin: 0 5px 3px 0;}
+         }
+       }
+     }
        
      .radio {
        min-height: 0;
@@ -1014,14 +1036,77 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   } 
 }
 
-.take_evaluation {
-  .signup{
-    text-align: left;
-    margin-top: 20px; 
+#take_evaluation {
+  padding: 24px; 
   
-    .button { width:185px; padding: 7px 12px 7px 7px; text-shadow: none; font-size: 13px;}
-    .button img { height:30px; }
-    .landingbuttontext { font-weight: regular; color: #636363;}
+  h2{ font-size: 30px; border-bottom: 1px solid #DDD; }
+  
+  .header {
+    padding-bottom: 10px;  
+    border-bottom: 1px solid #DDD;
+    
+    h1 { vertical-align: middle; font-size:50px; }
+    h3 { vertical-align: middle; font-size: 30px; }
+  }
+  .welcome{
+    text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;
+    
+    .holder {
+      border-bottom: 1px solid rgba(0,0,0,.1); padding: 14px;
+      
+      .image_box { 
+        display: inline-block; text-align: left; width:11%;
+        
+        img { height: 100px; }
+      }
+      .text_box {
+        display: inline-block; width: 86%; margin-left: 12px; vertical-align: top; text-align: left;
+        
+        h3 { font-size: 24px; }
+        p { font-size: 15px; line-height: 20px; margin-top: 8px; }
+      }
+    }
+  }
+  .application_steps {
+    margin: 20px; border-radius: 4px; border: 4px solid $employer_orange; padding: 12px; background-color: $employer_orange_light;
+    
+    .step {
+      margin-top: 40px;
+      
+      .img-circle {
+        height: 45px; width: 45px; line-height: 45px; display: inline-block; background-color:rgba(109, 44, 13, 0.64); color: #FFEDEA;
+        
+        span{ display: block; float: left; font-size: 18px; text-align: center; width: 100%; }
+      }
+      .instructions { 
+        display: inline-block; vertical-align: top; margin-left: 10px; padding-top: 2px; width: 92%;
+        
+        h4 { font-size: 24px; margin-bottom: 4px; }
+        p { display: inline-block; margin-bottom: 0; }
+        
+        .challenge_holder{
+          padding: 19px; margin-top: 20px;
+          
+          .challenge_card {
+            background-color: white; text-align: center; padding: 10px; display: inline-block; width: 180px; box-shadow: 0 0 10px 1px #DFC8C8;
+            
+            img { height: 120px; margin-top:25px; }
+            h5 { border-bottom: 1px solid rgba(0,0,0,.1); margin: 15px; font-weight: bold; font-size: 16px; }
+            button { margin-bottom: 10px; }
+          }
+          
+        }
+        
+        .signup{
+          text-align: left;
+          margin-top: 20px; 
+
+          .button { width:185px; padding: 7px 12px 7px 7px; text-shadow: none; font-size: 13px;}
+          .button img { height:30px; }
+          .landingbuttontext { font-weight: regular; color: #636363;}
+        }
+      }
+    }
   }
 }
 
