--- a/app/views/pages/take_evaluation.html.haml
+++ b/app/views/pages/take_evaluation.html.haml
@@ -1,29 +1,29 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ background: $employer_blue; width: 900px;}
+  .aboutcontainer{ width: 900px;}
   
 
 #employer.aboutcontainer
-  %div.aboutbox.take_evaluation{ style: "padding: 24px; "}
-    %div{ style: "padding-bottom: 10px;  border-bottom: 1px solid #DDD;" }
-      %h1{ style: "vertical-align: middle; font-size:50px;" } Community Manager
-      %h3{ style: "vertical-align: middle; font-size: 30px;"} Google, Inc.
-    %div{ style: "text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;"}
-      %div{ style: "border-bottom: 1px solid rgba(0,0,0,.1); padding: 14px; "}
-        %div{ style: "display: inline-block; text-align: left; width:11%; "}
-          = image_tag GIANT_STONEY, style: "height: 100px;"
-        %div{ style: "display: inline-block; width: 86%; margin-left: 12px; vertical-align: top; text-align: left;"}
-          %h3{ style: "font-size: 24px;" } Welcome to MetaBright!
-          %p{ style: "font-size: 15px; line-height: 20px; margin-top: 8px;"} Google, Inc. is using MetaBright to measure their job candidates' skills. MetaBright gives you the chance to prove and showcase what you know!
-    %h2{ style: "font-size: 30px; border-bottom: 1px solid #DDD;"} Apply to this job
-    %div{ style: "margin: 20px; border-radius: 4px; border: 4px solid $employer_orange; padding: 12px; background-color: $employer_orange_light;" }
-      %div{ style: ""}
-        %div.img-circle{ style: "height: 45px; width: 45px; line-height: 45px; display: inline-block; background-color:rgba(109, 44, 13, 0.64); color: #FFEDEA;" }
-          %span{ style: "display: block; float: left; font-size: 18px; text-align: center; width: 100%;"} 1
-        %div{ style: "display: inline-block; vertical-align: top; margin-left: 10px; padding-top: 2px; width: 92%;"} 
-          %h4{ style: "font-size: 24px; margin-bottom: 4px; "} Create an Account
+  #take_evaluation.aboutbox
+    .header
+      %h1 Community Manager
+      %h3 Google, Inc.
+    .welcome
+      .holder
+        .image_box
+          = image_tag GIANT_STONEY
+        .text_box
+          %h3 Welcome to MetaBright!
+          %p Google, Inc. is using MetaBright to measure their job candidates' skills. MetaBright gives you the chance to prove and showcase what you know!
+    %h2 Apply to this job
+    .application_steps
+      .step{ style: "margin-top: 0; "}
+        .img-circle
+          %span 1
+        .instructions
+          %h4 Create an Account
           = image_tag LIGHT_BULB_URL, style: "height: 15px; display: inline;"
-          %p{ style: "display: inline-block; margin-bottom: 0; "} You need to register so Google, Inc. can verify your identity.
+          %p You need to register so Google, Inc. can verify your identity.
           .signup
             = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 10px; margin-bottom: 0;", class: "button btn" do
               = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
@@ -35,25 +35,23 @@
               = image_tag ICON_LOGIN_GITHUB, alt: "GitHub sign up"
               %span.landingbuttontext GitHub sign up »
               
-        %div{ style: "margin-top: 40px; "}
-          %div.img-circle{ style: "height: 45px; width: 45px; line-height: 45px; display: inline-block; background-color:rgba(109, 44, 13, 0.64); color: #FFEDEA;" }
-            %span{ style: "display: block; float: left; font-size: 18px; text-align: center; width: 100%;"} 2
-          %div{ style: "display: inline-block; vertical-align: top; margin-left: 10px; padding-top: 2px; width: 92%;"}
-            %h4{ style: "font-size: 24px; margin-bottom: 4px; "} Take Tests
+        .step
+          .img-circle
+            %span 2
+          .instructions
+            %h4 Take Tests
             = image_tag LIGHT_BULB_URL, style: "height: 15px; display: inline;"
-            %p{ style: "display: inline-block; margin-bottom: 0; "} Each test should take you about 10 minutes.
-            %div{style: "padding: 19px; margin-top: 20px;"}
-              %div{ style: "background-color: white; text-align: center; padding: 10px; display: inline-block; width: 180px; box-shadow: 0 0 10px 1px #DFC8C8;"}
-                %img{ src: "http://www.placekitten.com/150/150", style: "height: 120px; margin-top:25px; "}
-                %h5{ style: "border-bottom: 1px solid rgba(0,0,0,.1); margin: 15px; font-weight: bold; font-size: 16px;"} Challenge Name
-                %button.button.button-small.button-actionable{ style: "margin-bottom: 10px; "} Begin Now
-              
-            
-        %div{ style: "margin-top: 40px; "}
-          %div.img-circle{ style: "height: 45px; width: 45px; line-height: 45px; display: inline-block; background-color:rgba(109, 44, 13, 0.64); color: #FFEDEA;" }
-            %span{ style: "display: block; float: left; font-size: 18px; text-align: center; width: 100%;"} 3
-          %div{ style: "display: inline-block; vertical-align: top; margin-left: 10px; padding-top: 2px; width: 92%;"}
-            %h4{ style: "font-size: 24px; margin-top: 10px; "} Submit Application
+            %p Each test should take you about 10 minutes.
+            .challenge_holder
+              .challenge_card
+                %img{ src: "http://www.placekitten.com/150/150" }
+                %h5 Challenge Name
+                %button.button.button-small.button-actionable Begin Now
+        .step
+          .img-circle
+            %span 3
+          .instructions
+            %h4 Submit Application
             %div{ style: "text-align: center; margin-top: 12px; "}
               %button.button.button-large.button-actionable{ style: "margin: 10px; float: left;"} Submit
           
