--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1043,11 +1043,44 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   
   .header {
     padding-bottom: 10px;  
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #EEE;
     
     h1 { vertical-align: middle; font-size:50px; }
     h3 { vertical-align: middle; font-size: 30px; }
+    
+    .image_box, .text_box { display: inline-block; vertical-align: top; }
   }
+  .body{
+    h4 {font-size: 20px; text-align: center; margin: 20px 10px;}
+    p {font-size: 15px;}
+    
+    table {
+      margin: 25px auto -35px;
+      text-align: left;
+
+      tr.tiles {
+        td {
+          width:125px;
+          height: 105px;
+          padding: 5px 5px 25px 0;
+          display: inline-block; 
+          margin-right: 60px;
+          margin-bottom: 40px;
+
+          &:nth-child(4){ margin-right: 0; }
+          .details { 
+            h4 { font: 500 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%; margin: 9px 10px 10px 10px; }
+            text-align: center; 
+          }
+          img { 
+            height: 130px; 
+            width: 130px;
+          }
+        }
+      }
+    }
+  }
+  
   .welcome{
     text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;
     
@@ -1068,7 +1101,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
     }
   }
   .application_steps {
-    margin: 20px; border-radius: 4px; border: 4px solid $employer_orange; padding: 12px; background-color: $employer_orange_light;
+    margin: 20px; border-radius: 4px; padding: 12px;
     
     .step {
       margin-top: 40px;
@@ -1158,6 +1191,23 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
 }
 
 #evaluations_overview{
+  background: $employer_blue;
+  
+  .aboutbox{
+    background-color: white; border-radius: 4px; padding:8px;
+    
+    .header { 
+      img{ display:inline; height:115px; }
+      span { font-size: 50px;position: relative;top:13px; }
+      hr { margin:0 0 20px 0; }
+    }
+    .body{
+      padding: 0 12px;
+      
+      p { margin: 10px 0; font-size: 16px; }
+    }
+  }
+  
   .evaluations {
     padding: 10px;
     margin: 10px;
