--- a/app/views/pages/evaluations_overview.html.haml
+++ b/app/views/pages/evaluations_overview.html.haml
@@ -1,15 +1,15 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 900px; background-color:rgba(36, 72, 109, 0.8);}
+  .aboutcontainer{ width: 900px;}
 
 
 #evaluations_overview.aboutcontainer
-  %div.aboutbox{ style: "background-color: white; border-radius: 4px; padding:8px;" }
-    = image_tag STONEY_SMALL_URL, style:"display:inline; height:115px;", alt: "Stoney"
-    %span{ style: "font-size: 50px;position: relative;top:13px;" } Evaluations Overview
-    = link_to "Create new Evaluation", "#", class: "button button-actionable button-small", style: "float: right; margin: 80px 10px 0 0;"
-    %hr{style:"margin:0 0 20px 0;"}
-    .body{ style: "padding: 0 12px;"}
+  .aboutbox
+    .header
+      = image_tag STONEY_SMALL_URL, style:"", alt: "Stoney"
+      %span Evaluations Overview
+      %hr
+    .body
       %h2 Open Evaluations
       .evaluations.green
         - if open_evaluations = false 
@@ -22,7 +22,7 @@
                 %th Last Submission         
                 %th Settings
         - else
-          %p{ style: "margin: 10px 0; font-size: 16px;"} 
+          %p 
             You don't have any open evaluations. 
             = link_to "Create one now.", "#"
       - if closed_evaluations = true
