--- a/app/views/evaluations/create_evaluation.html.haml
+++ b/app/views/evaluations/create_evaluation.html.haml
@@ -8,32 +8,32 @@
       %h1{ style: "display: inline; vertical-align: middle; font-size:50px;" } Create an Evaluation
       
     %div{ style: "width: 86%; text-align: center; margin: 20px auto 0 auto; padding: 0 7% 0 7%;" }
-      - if not current_user
-        %span You must register before you can create an Evaluation.
-      - else
-        %div{ style: "text-align: center; margin: 10px auto;" }
-          %div.action_group
-            %h3 What are the job details?
-            %div.tips
-              %h5 
-                %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-                Your company name and the position title will be displayed to candidates when they take your evaluation.
-            %div.control-group
-              %div.controls    
-                %input{autofocus: "autofocus", style: "padding: 5px; width: 400px; font-size: 16px; text-align: center;", placeholder: "Company Name"}   
-                %input{autofocus: "autofocus", style: "padding: 5px; width: 400px; font-size: 16px; text-align: center; margin-top: 20px;", placeholder: "Position Title"}
-                %div{style: "margin-top:10px;"} Upload job description (optional)
-          %div.action_group
-            %h3 What skills do you want evaluated?
-            %div.tips
-              %h5 
-                %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-                Choose up to three Challenges total. Each Challenge takes less than 10 minutes to complete.
-            .challenge_chooser
-              %h5 
-                MetaBright Challenges
-              .challenges
-                %form{:action => "#", :method => "get"}
+      = form_for(@evaluation) do |f|
+        - if not current_user
+          %span You must register before you can create an Evaluation.
+        - else
+          %div{ style: "text-align: center; margin: 10px auto;" }
+            %div.action_group
+              %h3 What are the job details?
+              %div.tips
+                %h5 
+                  %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
+                  Your company name and the position title will be displayed to candidates when they take your evaluation.
+              %div.control-group
+                %div.controls    
+                  = f.text_field :company, autofocus: "autofocus", style: "padding: 5px; width: 400px; font-size: 16px; text-align: center;", placeholder: "Company Name"
+                  = f.text_field :title, autofocus: "autofocus", style: "padding: 5px; width: 400px; font-size: 16px; text-align: center; margin-top: 20px;", placeholder: "Position Title"
+                  %div{style: "margin-top:10px;"} Upload job description (optional)
+            %div.action_group
+              %h3 What skills do you want evaluated?
+              %div.tips
+                %h5 
+                  %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
+                  Choose up to three Challenges total. Each Challenge takes less than 10 minutes to complete.
+              .challenge_chooser
+                %h5 
+                  MetaBright Challenges
+                .challenges
                   %ul.checklist
                     %li
                       %label{:for => "o1"}
@@ -63,11 +63,10 @@
                       %label{:for => "o6"}
                         %input#o5{:name => "o6", :type => "checkbox"}/
                         Javascript
-              %h5 
-                Your custom Challenges
-              .challenges
-                - if custom_challenges=custom_challenges
-                  %form{:action => "#", :method => "get"}
+                %h5 
+                  Your custom Challenges
+                .challenges
+                  - if custom_challenges=custom_challenges
                     %ul.checklist
                       %li
                         %label{:for => "o1"}
@@ -81,24 +80,12 @@
                         %label{:for => "o3"}
                           %input#o3{:name => "o3", :type => "checkbox"}/
                           HTML
-                - else
-                  %p 
-                    You don't have any custom Challenges. 
-                    = link_to "Create one now.", "#"
+                  - else
+                    %p 
+                      You don't have any custom Challenges. 
+                      = link_to "Create one now.", "#"
             
               
             
-      %div.row{ style: "margin: 40px auto 30px;" }
-        %button.button.button-xlarge.button-actionable{ onclick: "$('#new_path').submit();" } Create Evaluation
-    
-:javascript
-  $(function(){
-    $("#new_path").submit(function(){
-      if($("#stored_resource_id").val() == "" || $("path_name").val() == ""){
-        alert("You must provide an image and a name before you can create a Challenge.");
-        return false;
-      } else {
-        return true;
-      }
-    });
-  }); 
+        %div.row{ style: "margin: 40px auto 30px;" }
+          = f.submit("Create Evaluation", class: "button button-xlarge button-actionable")
