bunch more evaluation stuff

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1118,14 +1118,25 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
         p { display: inline-block; margin-bottom: 0; }
         
         .challenge_holder{
-          padding: 19px; margin-top: 20px;
+          padding: 15px 3px; margin-top: 20px;
           
           .challenge_card {
-            background-color: white; text-align: center; padding: 10px; display: inline-block; width: 180px; box-shadow: 0 0 10px 1px #DFC8C8;
+            background-color: white; 
+            text-align: center; 
+            padding: 10px; 
+            margin-right: 35px; 
+            display: inline-block; 
+            width: 180px; 
+            height: 237px; 
+            box-shadow: 0 0 10px 1px #DFDFDF;
+            vertical-align: top;
             
-            img { height: 120px; margin-top:25px; }
+            &:nth-child(3){margin-right:0;}
+            
+            img { height: 120px; width: 120px; margin-top:25px; }
             h5 { border-bottom: 1px solid rgba(0,0,0,.1); margin: 15px; font-weight: bold; font-size: 16px; }
             button { margin-bottom: 10px; }
+            div {font-size: 24px; color: $employer_green; margin-top: 23px;}
           }
           
         }
