--- a/app/views/evaluations/create_evaluation_confirmation.html.haml
+++ b/app/views/evaluations/create_evaluation_confirmation.html.haml
@@ -11,6 +11,7 @@
       .evaluation_info
         %h4= @evaluation.company
         %h4= @evaluation.title
-        %h4 http://www.metabright.com/1267yg9809bf93
+        %h4= @evaluation.paths.all.collect(&:name).join(",")
+        %h4= take_evaluation_url(@evaluation.permalink)
       %p Share your Evaluation URL with your candidates or post it in your job description. We'll email you when candidates take your Evaluation.
       = link_to "Continue to Evaluation Overview", "#"
