--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -12,23 +12,30 @@
     .body
       %h2 Open Evaluations
       .evaluations.green
-        - if open_evaluations = false 
+        - if @open_evaluations.empty?
+          %p 
+            You don't have any open evaluations. 
+            = link_to "Create one now.", new_group_evaluation_path(@group)
+        - else
           %table.table
             %thead
               %tr
                 %th Title
                 %th URL
                 %th Candidates
-                %th Last Submission         
+                %th Last Submission
                 %th Settings
             %tbody
               - @evaluations.to_a.each do |e|
-                %td= e.title
-        - else
-          %p 
-            You don't have any open evaluations. 
-            = link_to "Create one now.", "#"
-      - if closed_evaluations = true
+                %tr
+                  %td= e.title
+                  %td= take_group_evaluation_url(@group, e.permalink)
+                  %td= e.evaluation_users.count
+                  %td= e.evaluation_users.order("evaluation_users.submitted_at ASC").last
+                  %td= link_to "Edit", edit_group_evaluation_path(@group, e)
+              %tr
+                %td{ colspan: "5" }= link_to "Create a new evaluation", new_group_evaluation_path(@group)
+      - unless @closed_evaluations.empty?
         %h2{ style: "margin-top: 30px; "} Closed Evaluations
         .evaluations.orange
           %table.table
