--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -989,36 +989,64 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
  .tips {
    margin: 0 auto 20px;
  }
+ .evaluation_info{
+   border: 4px solid $employer_green;
+   background: $employer_green_light;
+   border-radius: 4px;
+   margin: 10px 0;
+   padding: 18px 25px;
+   text-align: left;
+   
+   span {
+     position: relative;
+     top: 5px;
+     font-size: 20px;
+     margin-right: 8px;
+   }
+   input{
+     cursor: text;
+     -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25);
+     border: 1px inset;
+     font-size: 16px;
+     background-color: white;
+     padding: 6px 14px;
+     width: 82%;
+   }
+   div {
+     margin: 12px 0 0 0;
+   }
+   p{
+     font-size: 16px;
+     display: inline;
+     line-height: 21px;
+   }
+ }
  .challenge_chooser {
    display: inline-block;
    width: 62%; 
    margin:0 20px; 
    vertical-align: top;
    border: 1px solid rgb(172, 172, 172);
-   padding: 10px;
+   padding: 12px;
    text-align: left;
    
    .challenges {
-     
-     input[type="radio"] { margin:0; }
-     
-     form { 
-       .checklist {
-         border: 1px solid #ccc;
-         list-style: none;
-         height: 170px;
-         overflow: auto;
-         margin: 0; 
-         padding: 5px 0 0 0;
+     .checklist {
+       border: 1px solid #ccc;
+       list-style: none;
+       height: 170px;
+       overflow: auto;
+       margin: 0; 
+       padding: 5px 0 0 0;
+       
+       li { margin: 0; padding: 0; }
+       label { 
+         display: block; padding: 5px 5px 5px 35px; text-indent: -25px;
          
-         li { margin: 0; padding: 0; }
-         label { 
-           display: block; padding: 5px 5px 5px 35px; text-indent: -25px;
-           
-           &:hover { background: $employer_green_light}
-           
-           input {margin: 0 5px 3px 0;}
-         }
+         &:hover { background: $employer_green_light}
+         
+         input {margin: 0 5px 3px 0;}
        }
      }
        
