--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -7,26 +7,28 @@
   %div.aboutbox{ style: "background-color: white; border-radius: 4px; padding:8px;" }
     = image_tag STONEY_SMALL_URL, style:"display:inline; height:115px;", alt: "Stoney"
     %span{ style: "font-size: 50px;position: relative;top:13px;" } Evaluation Manager
-    = link_to "Go back to overview", "#", class: "button button-info button-small", style: "float: right; margin: 80px 10px 0 0;"
+    
+    = link_to "Edit", edit_group_evaluations_path(@group, @evaluation), class: "button button-small", style: "float: right; margin: 80px 10px 0 0;"
+    = link_to "Back", group_evaluations_path(@group), class: "button button-info button-small", style: "float: right; margin: 80px 10px 0 0;"
+    
     %hr{style:"margin:0 0 20px 0;"}
     .body{ style: "padding: 0 12px;"}
-      .btn-group
-        %a.btn.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-          - @evaluations.each do |e|
-            = e.title
-          %span.caret
       %table.table
         %thead
           %tr
             %th Name
             %th Email
-            %th 
-              = image_tag "http://www.placekitten.com/50/50"
-              Challenge 1
-            %th 
-              = image_tag "http://www.placekitten.com/50/50"
-              Challenge 1       
-            %th 
-              = image_tag "http://www.placekitten.com/50/50"
-              Challenge 1
+            - @paths.each do |p|
+              %th= p.name
             %th Date Submitted
+        %tbody
+          - @evaluations.each do |e|
+            %tr
+              %td= e.name
+              %td= e.email
+              - @paths.each do |p|
+                %td= e["e#{p.id}_metapercentile"]
+              %td= time_ago_in_words(e.submitted_at)
+          - if @evaluations.empty?
+            %tr
+              %td{ colspan: 4 } No one has taken this evaluation yet.
